# absen-list

./: .env.example  .gitignore  README.md  acc.txt  app.py  logic.py  main.py  menu.py  package-lock.json  package.json  pyproject.toml  testing.py  user_option.py
app/: __init__.py
app/routes/: page.py
app/static/css/: styles.css
app/templates/: about.html  about.jinja2  contact.html  features.jinja2  index.html
app/templates/layouts/: base.html
app/templates/partials/: navbar.html
src/: __init__.py  app.py
src/db/: database.db
src/models/: user.py
src/routes/: auth.py  page.py
src/static/css/: styles.css
src/static/js/: script.js
src/templates/: contact.jinja2  index.jinja2  login.jinja2  start.jinja2
src/templates/layouts/: base.jinja2
src/templates/partials/: navbar.jinja2
static/css/: main.js  styles.css
templates/: base.html  features.html  index.html  login.html  test.html
templates/layouts/: base.html  main.html
templates/partials/: footer.html  header.html  navbar.html
